splitting file import + test

--- a/.gitignore
+++ b/.gitignore
@@ -329,12 +329,12 @@ ASALocalRun/
 
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
-/Common/Binaries/de
-/Common/Binaries
-/DataCenter/Binaries
-/DataCenter/Plugin.VisorSensors/Binaries
-/DMS/binaries
-/DomainLevelServices/Binaries
-/LMS/Binaries
-/MES/Binaries
-/WMS/Binaries
+Binaries/
+Common/Binaries/
+DataCenter/Binaries/
+DataCenter/Plugin.VisorSensors/Binaries/
+DMS/binaries/
+DomainLevelServices/Binaries/
+LMS/Binaries/
+MES/Binaries/
+WMS/Binaries/
