import of logp files working; testing download from logger

--- a/TemperatuurLogger/TemperatuurLogger.ImportLogp/ImportLogp.csproj
+++ b/TemperatuurLogger/TemperatuurLogger.ImportLogp/ImportLogp.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Xtensive.Orm.Sqlite" Version="6.0.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TemperatuurLogger.Model\TemperatuurLogger.Model.csproj" />
+  </ItemGroup>
+
 </Project>
