New server pics; prepping import and report

--- a/TemperatuurLogger/TemperatuurLogger.UI/TemperatuurLogger.UI.csproj
+++ b/TemperatuurLogger/TemperatuurLogger.UI/TemperatuurLogger.UI.csproj
@@ -9,13 +9,23 @@
     <AvaloniaResource Include="Assets\**" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\usbport.png" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Avalonia" Version="0.10.0" />
     <PackageReference Include="Avalonia.Desktop" Version="0.10.0" />
     <PackageReference Include="Avalonia.Diagnostics" Version="0.10.0" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.0" />
+    <PackageReference Include="ScottPlot" Version="4.1.12-beta" />
+    <PackageReference Include="ScottPlot.Avalonia" Version="4.1.12-beta" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TemperatuurLogger.Model\TemperatuurLogger.Model.csproj" />
     <ProjectReference Include="..\TemperatuurLogger.Protocol\TemperatuurLogger.Protocol.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Update="Views\ReportSteps\Step1CriteriaEntry.axaml.cs">
+      <DependentUpon>Step1CriteriaEntry.axaml</DependentUpon>
+    </Compile>
   </ItemGroup>
 </Project>
