--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,9 @@ bld/
 [Oo]bj/
 [Ll]og/
 
+#nuget packages
+[Pp]ackages/
+
 # Visual Studio 2015/2017 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
@@ -333,12 +336,3 @@ ASALocalRun/
 
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
-Binaries/
-Common/Binaries/
-DataCenter/Binaries/
-DataCenter/Plugin.VisorSensors/Binaries/
-DMS/binaries/
-DomainLevelServices/Binaries/
-LMS/Binaries/
-MES/Binaries/
-WMS/Binaries/
