--- a/TemperatuurLogger/TemperatuurLogger.Tests/TemperatuurLogger.Tests.csproj
+++ b/TemperatuurLogger/TemperatuurLogger.Tests/TemperatuurLogger.Tests.csproj
@@ -1,20 +1,27 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+
+	  <IsPackable>false</IsPackable>
+	  <IsTestProject>true</IsTestProject>
+  
+	  
   </PropertyGroup>
 
   <ItemGroup>
+	  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
     <PackageReference Include="Xtensive.Orm" Version="6.0.12" />
     <PackageReference Include="Xtensive.Orm.SQLite" Version="6.0.12" />
-    <PackageReference Include="NUnit" Version="4.0.1" />
-    <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
+    <PackageReference Include="NUnit" Version="4.3.2" />
+	  <PackageReference Include="NUnit3TestAdapter" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\TemperatuurLogger.Model\TemperatuurLogger.Model.csproj" />
+    <ProjectReference Include="..\TemperatuurLogger.Services\TemperatuurLogger.Services.csproj" />
   </ItemGroup>	
 
 </Project>
